# CarryPigeon-Desktop

./: .env.example  .env.production  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  app-snapshot.yml  components.d.ts  deny.toml  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.claude/: settings.local.json
design/: PRD.md  README.md
docs/: Feature API公开约束.md  Feature Capability整改清单.md  Feature命令并发规范.md  Feature模块设计规范.md  Feature深层设计TODO.md  Feature深层设计规范.md  Feature语义规范.md  README.md  Rust Feature Ports-Adapter检查清单.md  Rust统一标准.md  code-conventions.md  iteration-optimization-plan.md  performance-benchmarks.md  release-readiness-checklist.md  v0.4.0-release-notes.md  前端嵌入式文档规范.md  (+12 more)
src-tauri/: AGENTS.md  Cargo.toml  config  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/locales/: en_us.yml  zh_cn.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: log_commands.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/controller/: account.rs  encryption.rs  mod.rs  pull_file.rs  push_file.rs
src-tauri/src/dao/: channel.rs  friends.rs  group_message.rs  groups.rs  message.rs  message_object.rs  mod.rs  plugin.rs  private_message.rs
src-tauri/src/error/: mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/emoji/: mod.rs  repository.rs
src-tauri/src/features/emoji/di/: commands.rs
src-tauri/src/features/emoji/domain/: types.rs
src-tauri/src/features/network/: link_preview.rs  mod.rs
src-tauri/src/features/network/data/: http.rs  http_client.rs  mod.rs  tcp_real.rs
src-tauri/src/features/network/di/: commands.rs  event_sink.rs  mod.rs  models.rs  tcp_backend_factory.rs
src-tauri/src/features/network/domain/: mod.rs  types.rs
src-tauri/src/features/network/domain/ports/: api_request_port.rs  mod.rs  tcp_backend_factory_port.rs  tcp_backend_port.rs  tcp_event_sink.rs
src-tauri/src/features/network/mock/: mod.rs  tcp_mock.rs
src-tauri/src/features/network/usecases/: api_usecases.rs  mod.rs  tcp_usecases.rs
src-tauri/src/features/plugins/: mod.rs
src-tauri/src/features/plugins/data/: mod.rs  plugin_manager.rs  plugin_manifest.rs  plugin_ports.rs  plugin_store.rs
src-tauri/src/features/plugins/data/plugin_store/: api.rs  download.rs  hash.rs  json_io.rs  net_fetch.rs  origin.rs  paths.rs  state.rs  storage.rs  tls.rs  unpack.rs
src-tauri/src/features/plugins/di/: commands.rs  mod.rs
src-tauri/src/features/plugins/domain/: mod.rs  types.rs
src-tauri/src/features/plugins/domain/ports/: mod.rs  plugin_install_store_port.rs  plugin_loader_port.rs
src-tauri/src/features/plugins/mock/: mod.rs
src-tauri/src/features/plugins/usecases/: mod.rs  plugin_usecases.rs
src-tauri/src/features/screenshot/: mod.rs
src-tauri/src/features/screenshot/di/: capture.rs  commands.rs  mod.rs
src-tauri/src/features/settings/: mod.rs
src-tauri/src/features/settings/data/: config_store.rs  config_store_port_adapter.rs  mod.rs
src-tauri/src/features/settings/di/: commands.rs
src-tauri/src/features/settings/domain/: mod.rs  settings_schema.rs
src-tauri/src/features/settings/domain/ports/: config_store_port.rs  mod.rs
src-tauri/src/features/settings/mock/: mod.rs
src-tauri/src/features/settings/usecases/: config_usecases.rs  config_values.rs  mod.rs
src-tauri/src/features/tray/: mod.rs
src-tauri/src/features/tray/di/: commands.rs  mod.rs
src-tauri/src/features/tray/domain/: mod.rs  tray_i18n.rs
src-tauri/src/features/voice_call/: mod.rs
src-tauri/src/features/voice_call/data/: mod.rs
src-tauri/src/features/voice_call/data/audio/: device.rs  mod.rs  pipeline.rs
src-tauri/src/features/voice_call/data/signaling/: mod.rs
src-tauri/src/features/voice_call/data/webrtc/: mod.rs  peer_manager.rs
src-tauri/src/features/voice_call/di/: commands.rs  events.rs
src-tauri/src/features/voice_call/domain/: model.rs  ports.rs
src-tauri/src/features/voice_call/mock/: mod.rs
src-tauri/src/features/voice_message/: mod.rs  recorder.rs
src-tauri/src/features/voice_message/di/: commands.rs  mod.rs
src-tauri/src/features/windows/: mod.rs
src-tauri/src/features/windows/data/: mod.rs
src-tauri/src/features/windows/di/: commands.rs  info_window.rs  mod.rs  popover_window.rs
src-tauri/src/features/windows/domain/: mod.rs
src-tauri/src/features/windows/mock/: mod.rs
src-tauri/src/features/windows/usecases/: mod.rs  window_usecases.rs
src-tauri/src/filemanager/: mod.rs
src-tauri/src/log/: mod.rs
src-tauri/src/mapper/: common_message.rs  friends.rs  group_message.rs  group_messages.rs  groups.rs  message_object.rs  mod.rs  private_message.rs
src-tauri/src/model/: send_message.rs
src-tauri/src/plugin/: plugin_manager.rs
src-tauri/src/service/: http.rs  mod.rs  router.rs  tcp.rs
src-tauri/src/service/message/: notification.rs
src-tauri/src/service/net/: delete_message.rs  get_message.rs  mod.rs  receive.rs  receive_message.rs  receive_service_router.rs  send.rs  send_message.rs  tcp_service.rs
src-tauri/src/shared/: app_data_dir.rs  close_to_tray_state.rs  mod.rs
src-tauri/src/shared/chat_cache/: commands.rs  mod.rs
src-tauri/src/shared/db/: commands.rs  mod.rs
src-tauri/src/shared/error/: mod.rs
src-tauri/src/shared/log/: mod.rs
src-tauri/src/shared/net/: headers.rs  mod.rs  origin.rs  tls_fingerprint.rs
src-tauri/src/shared/temp_file/: cleanup.rs  commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/shared/temp_file/tests/: mod.rs  test_cleanup.rs  test_manager.rs
src-tauri/src/shared/window_bounds/: mod.rs
src-tauri/src/windows/: mod.rs  popover_window.rs  user_popover_window.rs
(+1392 files in other folders)
