[package]
name = "carrypigeon-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["Shirasawa <3489840593@qq.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carrypigeon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# tokio
tokio = { version = "1.48.0", features = ["full"] }

# tauri
tauri = { version = "2.9.1", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.5.2"

# 日志输出
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# json解析
serde = "1.0.228"
serde_json = "1.0.145"

# 数据库orm
sea-orm = { version = "2.0.0-rc.22", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }

# 错误处理
anyhow = "1"

# 网络请求
reqwest = { version = "0.12.24", features = ["json", "stream"] }
sha2 = "0.10.8"

# TLS
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"

# wasm支持
wasmtime = { version = "39.0.1", features = ["component-model"] }
hex = "0.4.3"

# zip 解压（插件包安装）
zip = "0.6.6"
