[package]
name = "carrypigeon-desktop"
version = "0.1.1"
description = "A Tauri App"
authors = ["Shirasawa <3489840593@qq.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carrypigeon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# tokio
tokio = { version = "1.48.0", features = ["full"] }

# tauri
tauri = { version = "2.10.1", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-notification = "2"

# 日志输出
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.11.2"

# bytes
bytes = "1"

# json解析
serde = "1.0.228"
serde_json = "1.0.145"

# 数据库orm
sea-orm = { version = "2.0.0-rc.22", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }

# 错误处理
anyhow = "1"
aes-gcm = "0.10.3"
keyring = "4.0.0"
keyring-core = "1.0.0"

# 网络请求
reqwest = { version = "0.13.3", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.11.0"

# TLS
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"

# wasm支持
wasmtime = { version = "45.0.0", features = ["component-model"] }
hex = "0.4.3"
getrandom = "0.4.2"

# zip 解压（插件包安装）
zip = "8.6.0"
async-trait = "0.1.89"
cpal = "0.17.3"

# WebRTC P2P
webrtc = "0.17.1"
opus-wave = "3.0.1"

# 信令 WebSocket
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }

# 自定义表情（emoji 模块）
image = "0.25"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
